--- a/src/components/css/Editor.css
+++ b/src/components/css/Editor.css
@@ -1,6 +1,13 @@
 .editorTextarea {
   font-size: 18px;
-  width: 50%;
-  height: 500px;
+  width: 100%;
+  height: 100%;
+  margin: 0;
+  padding: 10px;
 }
 
+.editor {
+  margin-left: 10px;
+  grid-column: 1 / 2;
+  grid-row: 2 / 3;
+}
